--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tailwind.config.mjs",
+    "tailwind.config.ts",
     "postcss.config.js"
   ],
   "exclude": ["node_modules"]
