--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "15.4.3",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.1.0",
@@ -93,7 +93,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.5.6",
-    "typescript": "^5",
+    "typescript": "5.9.2",
     "typescript-eslint": "^8.0.1"
   }
 }
