--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
   push:
     branches:
-      - master # or 'main' or whichever branch you want
+      - main # or 'main' or whichever branch you want
 
 jobs:
   deploy:
