--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.2.0",
@@ -66,7 +65,7 @@
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
@@ -85,6 +84,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.21",
     "chokidar-cli": "^3.0.0",
     "eslint": "^9",
@@ -93,7 +93,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.5.6",
-    "typescript": "5.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.0.1"
   }
 }
