--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "lucide-react": "^0.462.0",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
@@ -69,7 +69,6 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.3",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
@@ -93,7 +92,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.5.6",
-    "typescript": "^5.8.3",
+    "typescript": "5.9.2",
     "typescript-eslint": "^8.0.1"
   }
 }
