--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
