--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.2.0",
